--- a/GeekShopping.CartAPI/appsettings.json
+++ b/GeekShopping.CartAPI/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "MySqlConnection": {
     "MySqlConnectionString": "Server=localhost;DataBase=geek_shopping_cart_api;Uid=root;Pwd=034977"
+  },
+  "ServiceUrls": {    
+    "CouponAPI": "https://localhost:4450"
   }
 }
