Payment Order Process implementado

--- a/GeekShopping.OrderAPI/GeekShopping.OrderAPI.csproj
+++ b/GeekShopping.OrderAPI/GeekShopping.OrderAPI.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GeekShopping.MessageBus\GeekShopping.MessageBus.csproj" />
+    <ProjectReference Include="..\GeekShopping.Utils\GeekShopping.Utils.csproj" />
   </ItemGroup>
 
   <ItemGroup>
