API Gateway com Ocelot incluído e configurado.

--- a/GeekShopping.OrderAPI/GeekShopping.OrderAPI.csproj
+++ b/GeekShopping.OrderAPI/GeekShopping.OrderAPI.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GeekShopping.Integration\GeekShopping.Integration.csproj" />
     <ProjectReference Include="..\GeekShopping.MessageBus\GeekShopping.MessageBus.csproj" />
     <ProjectReference Include="..\GeekShopping.Utils\GeekShopping.Utils.csproj" />
   </ItemGroup>
