--- a/GeekShopping.APIGateway/Properties/launchSettings.json
+++ b/GeekShopping.APIGateway/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "GeekShopping.APIGateway": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "hotReloadProfile": "aspnetcore",
       "applicationUrl": "https://localhost:4480;http://localhost:4481",
       "environmentVariables": {
@@ -20,7 +20,7 @@
     },
     "IIS Express": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:4480/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
