--- a/GeekShopping.Email/GeekShopping.Email.csproj
+++ b/GeekShopping.Email/GeekShopping.Email.csproj
@@ -7,22 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="GeekShopping.Integration" Version="1.0.0" />
+    <PackageReference Include="GeekShopping.MessageBus" Version="1.0.0" />
+    <PackageReference Include="GeekShopping.Utils" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
-    <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.3.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.3.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\GeekShopping.Integration\GeekShopping.Integration.csproj" />
-    <ProjectReference Include="..\GeekShopping.MessageBus\GeekShopping.MessageBus.csproj" />
-    <ProjectReference Include="..\GeekShopping.Utils\GeekShopping.Utils.csproj" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />    
   </ItemGroup>
 
 </Project>
