--- a/GeekShopping.OrderAPI/GeekShopping.OrderAPI.csproj
+++ b/GeekShopping.OrderAPI/GeekShopping.OrderAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -14,15 +14,9 @@
     </PackageReference>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
     <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.3.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.3.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\GeekShopping.Integration\GeekShopping.Integration.csproj" />
-    <ProjectReference Include="..\GeekShopping.MessageBus\GeekShopping.MessageBus.csproj" />
-    <ProjectReference Include="..\GeekShopping.Utils\GeekShopping.Utils.csproj" />
+    <PackageReference Include="GeekShopping.Integration" Version="1.0.0" />
+    <PackageReference Include="GeekShopping.MessageBus" Version="1.0.0" />
+    <PackageReference Include="GeekShopping.Utils" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
