--- a/GeekShopping.PaymentAPI/GeekShopping.PaymentAPI.csproj
+++ b/GeekShopping.PaymentAPI/GeekShopping.PaymentAPI.csproj
@@ -14,20 +14,13 @@
     </PackageReference>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
     <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.3.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.3.1" />
+    <PackageReference Include="GeekShopping.Integration" Version="1.0.0" />
+    <PackageReference Include="GeekShopping.MessageBus" Version="1.0.0" />
+    <PackageReference Include="GeekShopping.Utils" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GeekShopping.Integration\GeekShopping.Integration.csproj" />
-    <ProjectReference Include="..\GeekShopping.MessageBus\GeekShopping.MessageBus.csproj" />
     <ProjectReference Include="..\GeekShopping.PaymentProcessor\GeekShopping.PaymentProcessor.csproj" />
-    <ProjectReference Include="..\GeekShopping.Utils\GeekShopping.Utils.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
