--- a/GeekShopping.PaymentAPI/Properties/launchSettings.json
+++ b/GeekShopping.PaymentAPI/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "GeekShopping.PaymentAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7202;http://localhost:5202",
       "environmentVariables": {
@@ -21,7 +21,7 @@
     },
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
